alterado titulo para teste

--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -9,7 +9,7 @@
     <title>Página de Cadastro</title>
 </head><!--}}}-->
 <body>
-    <h1>Página Cadastro</h1>
+    <h1>Página Cadastro LDMUSIC</h1>
     <hr>
     <form action="{{ url_for ('cadastro')}}" method="POST">
       <table>
