--- a/templates/aluno.html
+++ b/templates/aluno.html
@@ -6,10 +6,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
+    <title>Bem vindo (NOME_DO_ALUNO)</title>
 </head>
 <body>
-    <h1>Cadastro</h1>
-    <a href="{{ url_for('cadastrar') }}">Cadastrar Clientes</a>
 </body>
 </html>
+
