--- a/app/templates/cadastro.html
+++ b/app/templates/cadastro.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Cadastro</title>
-</head><!--}}}-->
+</head>
 <body>
     <h1>Página Cadastro LDMUSIC</h1>
     <hr>
@@ -18,8 +18,13 @@
           <td><input type="text" name="nome"></td>
         </tr>
         <tr>
+          <td><input type="radio" name="Aluno" value="aluno"></td>>
           <td>Email</td>
           <td><input type="text" name="email"></td>
+        </tr>
+        <tr>
+          <td>Senha</td>
+          <td><input type="text" name="senha"></td>
         </tr>
       </table><br>
       <input type="submit" value="Cadastrar">
