--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -21,7 +21,7 @@
     <a class="nav-link" href="#">Instrutores</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Alunos</a>
+    <a class="nav-link" href="{{ url_for('lista')}}">Lista de Alunos</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">Login</a>
@@ -30,7 +30,5 @@
     <a class="nav-link" href="{{ url_for('cadastrar') }}">Cadastre-se</a>
   </li>
 </ul>
-<!--    <h1>Cadastro</h1>
-  <a href="{{ url_for('cadastrar') }}">Cadastrar Clientes</a> -->
 </body>
 </html>
