--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -13,22 +13,24 @@
   <h1>ldMusic</h1>
   <p>Conectando a Paixão por Música!</p>
 </header>
-<ul class="nav nav-pills">
-  <li class="nav-item">
-    <a class="nav-link" href="#">Instrumentos</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Instrutores</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="{{ url_for('lista')}}">Lista de Alunos</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Login</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="{{ url_for('cadastrar') }}">Cadastre-se</a>
-  </li>
-</ul>
+<nav>
+  <ul class="nav nav-pills">
+    <li class="nav-item">
+      <a class="nav-link" href="#">Instrumentos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Instrutores</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{{ url_for('lista')}}">Lista de Alunos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Login</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{{ url_for('cadastrar') }}">Cadastre-se</a>
+    </li>
+  </ul>
+</nav>
 </body>
 </html>
