--- a/app/templates/cadastro.html
+++ b/app/templates/cadastro.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Página de Cadastro</title>
-</head>
-<body>
-  {%include "nav.html"%}
-<header>
-  <h3>Página Cadastro LDMUSIC</h3>
-  <hr>
-</header>
-<form action="{{ url_for ('cadastro')}}" method="POST">
-  <div class="form-group">
-    <table>
-      <p>Selecione o tipo de Usuário</p><br>
-      <input type="radio" id="aluno" name="tipoUsuario" value="aluno">
-      <label for="male">Aluno</label><br>
-      <input type="radio" id="instrutor" name="tipoUsuario" value="instrutor">
-      <label for="female">Instrutor</label><br>
-      <tr>
-        <td>Nome</td>
-        <td><input type="text" name="nome"></td>
-      </tr>
-      <tr>
-        <td>Email</td>
-        <td><input type="text" name="email"></td>
-      </tr>
-      <tr>
-        <td>Senha</td>
-        <td><input type="password" name="senha"></td>
-      </tr>
-    </table><br>
-  </div>
-  <input type="submit" class="btn btn-primary" value="Cadastrar">
-</form>
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-</body>
+  <head>
+      <!-- Bootstrap CSS -->
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      <title>Página de Cadastro</title>
+  </head>
+  <body>
+    {%include "nav.html"%}
+    <header>
+      <h3>Página Cadastro LDMUSIC</h3>
+      <hr>
+    </header>
+    <form action="{{ url_for ('cadastro')}}" method="POST">
+      <div class="form-group">
+        <table>
+          <p>Selecione o tipo de Usuário</p><br>
+          <input type="radio" id="aluno" name="tipoUsuario" value="aluno">
+          <label for="male">Aluno</label><br>
+          <input type="radio" id="instrutor" name="tipoUsuario" value="instrutor">
+          <label for="female">Instrutor</label><br>
+          <tr>
+            <td>Nome</td>
+            <td><input type="text" name="nome"></td>
+          </tr>
+          <tr>
+            <td>Email</td>
+            <td><input type="text" name="email"></td>
+          </tr>
+          <tr>
+            <td>Senha</td>
+            <td><input type="password" name="senha"></td>
+          </tr>
+        </table><br>
+      </div>
+      <input type="submit" class="btn btn-primary" value="Cadastrar">
+    </form>
+    <!-- Jquery Slim, Popper Min, BootStrap Min -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </body>
 </html>
