--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a navbar-brand href="{{url_for('index')}}">ldMusic</a>
+    <a class="p-3 navbar-brand border border-dark rounded-pill" href="{{url_for('index')}}">ldMusic</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
