testando bootstrap e outras funcionalidades

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <title>Conectando a paixão por música! - ldMusic </title>
-</head>
-<body>
-  {%include "base.html"%}
-  {%include "nav.html"%}
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}Conectando a paixão por música!{% endblock %}
+{% block body %}
+    <h1> Bem vindo ao mundo da música!</h1>
+{% endblock %}
