--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,8 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
     {% block head %}
     <title>{% block title %}{% endblock %} - ldMusic</title>
     {% endblock %}
+    <meta charset="utf-8"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
     {% block body %}
@@ -12,45 +15,9 @@
 
     </header>
     {% endblock  %}
-    {% include "scripts.html" %}
+     <!-1- Jquery Slim, Popper Min, BootStrap Min -1-> -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+ poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--<!DOCTYPE html> -->
-<!--<html lang="en"> -->
-<!--  <head> -->
-<!--<!-1-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> -1-> -->
-<!--    <meta charset="utf-8"> -->
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
-<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"   crossorigin="anonymous"> -->
-<!--  </head> -->
-<!--  <body> -->
-<!--    <header> -->
-<!--      <p>Conectando a Paixão por Música!</p> -->
-<!--    </header> -->
-<!--    <ul class="nav nav-nav navbar-right"> -->
-<!--        {% if usuario_atual.is_authenticated %} -->
-<!--        <li><a href="{{ url_for('auth.logout') }}"> Sair </a></li> -->
-<!--        {% else %} -->
-<!--        <li><a href="{{ url_for('auth.login')}}"> Entrar</a></li> -->
-<!--        {% endif %} -->
-<!--    </ul> -->
-<!--      
-<!--      
-<!--       -->
-<!--       -->
-<!--    </body> -->
-<!--</html> -->
