--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,10 +8,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
+
+    
     {% block body %}
     <header>
     {% block header%}
     {% endblock  %}
+    <ul class="nav navbar-nav navbar-right">
+        {% if current_user.is_authenticated %}
+        <li><a href="{{ url_for('auth.logout') }}">Sair</a></li>
+        {% else %}
+        <li><a href="{{ url_for('auth.login') }}">Entrar</a></li>
+        {% endif %}
+    </ul>
 
     </header>
     {% endblock  %}
