--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,32 +1,38 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    {% block head %}
-    <title>{% block title %}{% endblock %} - ldMusic</title>
-    {% endblock %}
-    <meta charset="utf-8"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-</head>
-<body>
+{% extends "bootstrap/base.html" %}
 
-    
-    {% block body %}
-    <header>
-    {% block header%}
-    {% endblock  %}
-    <ul class="nav navbar-nav navbar-right">
-        {% if current_user.is_authenticated %}
-        <li><a href="{{ url_for('auth.logout') }}">Sair</a></li>
-        {% else %}
-        <li><a href="{{ url_for('auth.login') }}">Entrar</a></li>
-        {% endif %}
-    </ul>
+{% block title %}ldMusic{% endblock %}
 
-    </header>
-    {% endblock  %}
-     <!-1- Jquery Slim, Popper Min, BootStrap Min -1-> -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+ poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> 
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-</body>
-</html>
+{% block navbar %}
+<div class="navbar navbar-inverse" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".   navbar-collapse">
+                <span class="sr-only">Toggle Navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">ldMusic</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="/">Início</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {% if current_user.is_authenticated %}
+                    <li><a href="{{ url_for('auth.logout') }}">Sair</a></li>
+                {% else %}
+                    <li><a href="{{ url_for('cadastro.html') }}">Cadastrar</a></li>
+                    <li><a href="{{ url_for('auth.login') }}">Entrar</a></li>
+                {% endif %}
+            </ul>   
+        </div>
+    </div>
+</div>
+{% endblock %}
+
+{% block content %}
+<div class="container">
+    {% block page_content %}{% endblock %}
+</div>
+{% endblock %}
