pequenos consertos no frontend

--- a/ldMusicPy/templates/main.html
+++ b/ldMusicPy/templates/main.html
@@ -1,6 +1,5 @@
-{% extends "base.html" %}
+{% include "base.html" %}
 {% block title %}Conectando a paixão por música!{% endblock %}
 {% block body %}
     <h1> Bem vindo ao mundo da música!</h1>
 {% endblock %}
-<p> Hora Local {{ moment(current_time).format('LLLL') }}.</p>
