--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Olá, {% if current_user.is_authenticated %}{{ current_user.nome }}{% else %}ser Humano{% endif %}!</h1>
+    <h1>Olá, {% if current_user.is_authenticated %}{{ current_user.username }}{% else %}ser Humano{% endif %}!</h1>
 </div>
 {% if pagination %}
 <div class="pagination">
