--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,8 +5,9 @@
 {% block title %}ldMusic{% endblock %}
 
 {% block page_content %}
-<div class="page-header">
-    <h1>Olá, {% if current_user.is_authenticated %}{{ current_user.username }}{% else %}ser Humano{% endif %}!</h1>
+<div class="page-header" align="center">
+    <h2>Bem vindo ao ldMusic, {% if current_user.is_authenticated %}{{ current_user.username }}{% else %}ser Humano{% endif %}!</h2>
+    <img src="../static/compose.svg" width="320" class="img-rounded" alt="Compondo musica">
 </div>
 {% if pagination %}
 <div class="pagination">
