adicionado botão de cadastrar no nav

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,6 +42,7 @@
                 </li>
                 {% else %}
                 <li><a href="{{ url_for('login') }}">Entrar</a></li>
+                <li><a href="{{ url_for('cadastro') }}">Cadastrar</a></li>
                 {% endif %}
             </ul>
         </div>
