--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -11,7 +11,7 @@
     <div class="album py-5 bg-light">
         <div class="container">
 
-            {% for form in form %}
+            {% for usuarios in usuarios %}
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                     <div class="col-md-4">
