--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,7 +3,18 @@
 {% import "_macros.html" as macros %}
 
 {% block title %}ldMusic{% endblock %}
-
+{% block instrumentos %}
+<li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+        Instrumentos<b class="caret"></b>
+    </a>
+    <ul class="dropdown-menu">
+        <li><a href="">Bateria</a></li>
+        <li><a href="">Violao</a></li>
+        <li><a href="">Guitarra</a></li>
+    </ul>
+</li>
+{% endblock  %}
 {% block content %}
 <main role="main">
 
