--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,7 +27,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 {% if current_user.is_authenticated %}
-                <li><a href="{{ url_for('usuario', username=current_user.username) }}">Meu Perfil</a></li>
+                <li><a href="{{ url_for('main.usuario', username=current_user.username) }}">Meu Perfil</a></li>
                 {% endif %}
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -38,9 +38,9 @@
                         Minha Conta<b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="{{ url_for('alterar_senha') }}">Alterar Senha</a></li>
-                        <li><a href="{{ url_for('requisicao_alterar_email') }}">Alterar Email</a></li>
-                        <li><a href="{{ url_for('logout') }}">Sair</a></li>
+                        <li><a href="{{ url_for('autenticacao.alterar_senha') }}">Alterar Senha</a></li>
+                        <li><a href="{{ url_for('autenticacao.requisicao_alterar_email') }}">Alterar Email</a></li>
+                        <li><a href="{{ url_for('autenticacao.logout') }}">Sair</a></li>
                     </ul>
                 </li>
                 {% else %}
