--- a/app/templates/administrador.html
+++ b/app/templates/administrador.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% import "_macros.html" as macros %}
 
-{% block title %}ldMusic - Administradores{% endblock %}
+{% block title %}ldMusic - Administrador{% endblock %}
 
 {% block content %}
 <main role="main">
