--- a/app/templates/administrador.html
+++ b/app/templates/administrador.html
@@ -4,65 +4,103 @@
 
 
 {% block page_content %}
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
 
-<form class="form-inline my-2 my-lg-0">
-    <label for="">Instrumento</label>
-    <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-</form>
-<form class="form-inline my-2 my-lg-0">
-    <label for="">Nome</label>
-    <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-</form>
-<form class="form-inline my-2 my-lg-0">
-    <label for="">Cidade</label>
-    <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-</form>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+            aria-expanded="false">Filtro <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Nome</a></li>
+            <li><a href="#">Instrumento</a></li>
+            <li><a href="#">Cidade</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav nav-pills navbar-right" role="tablist">
+        <li role="presentation" class="active" style="margin-top: 5px;"><a href="#">Total <span class="badge">42</span></a></li>
+      </ul>
+
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 <div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Instrutor
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Instrutor
     <ul class="dropdown-menu">
-        <li><a href="#">Por Nome</a></li>
-        <li><a href="#">Por Cidade</a></li>
-        <li><a href="#">Por Instrumento</a>
+      <li><a href="#">Por Nome</a></li>
+      <li><a href="#">Por Cidade</a></li>
+      <li><a href="#">Por Instrumento</a>
     </ul>
     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Aluno
-        <ul class="dropdown-menu">
-            <li><a href="#">Por Nome</a></li>
-            <li><a href="#">Por Cidade</a></li>
-            <li><a href="#">Por Cidadeor Instruento</a></li>
-        </ul>
+      <ul class="dropdown-menu">
+        <li><a href="#">Por Nome</a></li>
+        <li><a href="#">Por Cidade</a></li>
+        <li><a href="#">Por Cidadeor Instruento</a></li>
+      </ul>
 </div>
 <table class="table">
-    <thead>
+  <thead>
     <tr>
-        <th scope="col">#</th>
-        <th scope="col">id</th>
-        <th scope="col">Nome</th>
-        <th scope="col">e-mail</th>
-        <th scope="col">Perfil</th>
+      <th scope="col">#</th>
+      <th scope="col">id</th>
+      <th scope="col">Nome</th>
+      <th scope="col">e-mail</th>
+      <th scope="col">Perfil</th>
     </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>João</td>
-        <td>Silva</td>
-        <td></td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Antônio</td>
-        <td>Jose</td>
-        <td></td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>Ana</td>
-        <td>the Bird</td>
-        <td>@twitter</td>
-      </tr>
-    </tbody>
-  </table>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>João</td>
+      <td>Silva</td>
+      <td>silva@gmail.com</td>
+      <td>silva_93</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>João</td>
+      <td>Silva</td>
+      <td>silva@gmail.com</td>
+      <td>silva_93</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>João</td>
+      <td>Silva</td>
+      <td>silva@gmail.com</td>
+      <td>silva_93</td>
+    </tr>
+  </tbody>
+</table>
+
+<div class="btn-group btn-group-justified" role="group" aria-label="...">
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-default">Voltar</button>
+  </div>
+
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-default">Sair</button>
+  </div>
+</div>
 {% endblock %}
