--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
 
 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 {% endblock %}
 
 
@@ -62,7 +62,10 @@
     </div>
     {% endfor %}
 
-    {% block page_content %}{% endblock %}
+
+    {% block page_content %}
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+    {% endblock %}
 </div>
 {% endblock %}
 
