--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -57,92 +57,97 @@
 </nav>
 
 <div class="body conteudo-cards">
-    <div class="cards">
-        <div class="card">
-            <ul>
-                <li>distancia</li>
-                <li>Nome</li>
-                <li><input type="reset" value="Disponivel"></li>
-            </ul>
-            <hr>
-            <ul>
-                <li>Instrumento</li>
-                <li>Tempo de experiência</li>
-            </ul>
-            <hr>
-            <ul>
-                <li><input type="reset" value="Solicitar Contato"></li>
-                <li><input type="reset" value="Video"></li>
-            </ul>
-        </div>
-        <div class="card">
-            <ul>
-                <li>distancia</li>
-                <li>Nome</li>
-                <li><input type="reset" value="Disponivel"></li>
-            </ul>
-            <hr>
-            <ul>
-                <li>Instrumento</li>
-                <li>Tempo de experiência</li>
-            </ul>
-            <hr>
-            <ul>
-                <li><input type="reset" value="Solicitar Contato"></li>
-                <li><input type="reset" value="Video"></li>
-            </ul>
-        </div>
-        <div class="card">
-            <ul>
-                <li>distancia</li>
-                <li>Nome</li>
-                <li><input type="reset" value="Disponivel"></li>
-            </ul>
-            <hr>
-            <ul>
-                <li>Instrumento</li>
-                <li>Tempo de experiência</li>
-            </ul>
-            <hr>
-            <ul>
-                <li><input type="reset" value="Solicitar Contato"></li>
-                <li><input type="reset" value="Video"></li>
-            </ul>
-        </div>
-        <div class="card">
-            <ul>
-                <li>distancia</li>
-                <li>Nome</li>
-                <li><input type="reset" value="Disponivel"></li>
-            </ul>
-            <hr>
-            <ul>
-                <li>Instrumento</li>
-                <li>Tempo de experiência</li>
-            </ul>
-            <hr>
-            <ul>
-                <li><input type="reset" value="Solicitar Contato"></li>
-                <li><input type="reset" value="Video"></li>
-            </ul>
-        </div>
+    <div class="card">
+        <ul>
+            <li>distancia</li>
+            <li>Nome</li>
+            <li><input type="reset" value="Disponivel"></li>
+        </ul>
+        <hr>
+        <ul>
+            <li>Instrumento</li>
+            <div>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
+            </div>
+        </ul>
+        <hr>
+        <ul>
+            <li><input type="reset" value="Solicitar Contato"></li>
+            <li><input type="reset" value="Video"></li>
+        </ul>
     </div>
-    <div class="avaliacoes">
-        <div class="avaliacao">
-            <ul>
-                <label for="">Instrutor</label>
-                <input type="text" name="" id="">
-                <br>
-                <label for="">instrumento</label>
-                <input type="text" name="" id="">
-            </ul>
-            <hr>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star"></span>
-            <span class="fa fa-star"></span>
-        </div>
+    <div class="card">
+        <ul>
+            <li>distancia</li>
+            <li>Nome</li>
+            <li><input type="reset" value="Disponivel"></li>
+        </ul>
+        <hr>
+        <ul>
+            <li>Instrumento</li>
+            <div>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
+            </div>
+        </ul>
+        <hr>
+        <ul>
+            <li><input type="reset" value="Solicitar Contato"></li>
+            <li><input type="reset" value="Video"></li>
+        </ul>
+    </div>
+    <div class="card">
+        <ul>
+            <li>distancia</li>
+            <li>Nome</li>
+            <li><input type="reset" value="Disponivel"></li>
+        </ul>
+        <hr>
+        <ul>
+            <li>Instrumento</li>
+            <div>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
+            </div>
+        </ul>
+        <hr>
+        <ul>
+            <li><input type="reset" value="Solicitar Contato"></li>
+            <li><input type="reset" value="Video"></li>
+        </ul>
+    </div>
+    <div class="card">
+        <ul>
+            <li>distancia</li>
+            <li>Nome</li>
+            <li><input type="reset" value="Disponivel"></li>
+        </ul>
+        <hr>
+        <ul>
+            <li>Instrumento</li>
+            <div>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
+            </div>
+        </ul>
+        <hr>
+        <ul>
+            <li><input type="reset" value="Solicitar Contato"></li>
+            <li><input type="reset" value="Video"></li>
+        </ul>
     </div>
 </div>
 
