tela gerencia perfil

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -17,6 +17,9 @@
 {% endblock  %}
 {% block content %}
 
+<div class="titulo-isntrutor">
+    <h1>Contatos solicitados</h1>
+</div>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -55,7 +58,6 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-
 <div class="body conteudo-cards">
     <div class="card">
         <ul>
