--- a/app/templates/instrutor.html
+++ b/app/templates/instrutor.html
@@ -8,91 +8,97 @@
 {% endblock  %}
 {% block content %}
 
+<div class="titulo-isntrutor">
+    <h1>Contatos solicitados</h1>
+</div>
 <div class="body conteudo-cards">
-    <div class="cards">
-        <h1>Contatos Solicitados</h1>
-        <div class="card">
-            <ul>
-                <li>distancia</li>
-                <li>Nome</li>
-                <li><input type="reset" value="Disponivel"></li>
-            </ul>
-            <hr>
-            <ul>
-                <li>Instrumento</li>
-                <li>Tempo de experiência</li>
-            </ul>
-            <hr>
-            <ul>
-                <li><input type="reset" value="Solicitar Contato"></li>
-                <li><input type="reset" value="Video"></li>
-            </ul>
-        </div>
-        <div class="card">
-            <ul>
-                <li>distancia</li>
-                <li>Nome</li>
-                <li><input type="reset" value="Disponivel"></li>
-            </ul>
-            <hr>
-            <ul>
-                <li>Instrumento</li>
-                <li>Tempo de experiência</li>
-            </ul>
-            <hr>
-            <ul>
-                <li><input type="reset" value="Solicitar Contato"></li>
-                <li><input type="reset" value="Video"></li>
-            </ul>
-        </div>
-        <div class="card">
-            <ul>
-                <li>distancia</li>
-                <li>Nome</li>
-                <li><input type="reset" value="Disponivel"></li>
-            </ul>
-            <hr>
-            <ul>
-                <li>Instrumento</li>
-                <li>Tempo de experiência</li>
-            </ul>
-            <hr>
-            <ul>
-                <li><input type="reset" value="Solicitar Contato"></li>
-                <li><input type="reset" value="Video"></li>
-            </ul>
-        </div>
-        <div class="card">
-            <ul>
-                <li>distancia</li>
-                <li>Nome</li>
-                <li><input type="reset" value="Disponivel"></li>
-            </ul>
-            <hr>
-            <ul>
-                <li>Instrumento</li>
-                <li>Tempo de experiência</li>
-            </ul>
-            <hr>
-            <ul>
-                <li><input type="reset" value="Solicitar Contato"></li>
-                <li><input type="reset" value="Video"></li>
-            </ul>
-        </div>
+    <div class="card">
+        <ul>
+            <li>distancia</li>
+            <li>Nome</li>
+            <li><input type="reset" value="Disponivel"></li>
+        </ul>
+        <hr>
+        <ul>
+            <li>Instrumento</li>
+            <div>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
+            </div>
+        </ul>
+        <hr>
+        <ul>
+            <li><input type="reset" value="Contato"></li>
+        </ul>
     </div>
-    <div class="avaliacoes">
-        <h1> Avalicoes recebidas</h1>
-        <div class="avaliacao">
-            <ul>
-               <h3>Nome do Instrutor</h3>
-            </ul>
-            <hr>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star"></span>
-            <span class="fa fa-star"></span>
-        </div>
+    <div class="card">
+        <ul>
+            <li>distancia</li>
+            <li>Nome</li>
+            <li><input type="reset" value="Disponivel"></li>
+        </ul>
+        <hr>
+        <ul>
+            <li>Instrumento</li>
+            <div>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
+            </div>
+        </ul>
+        <hr>
+        <ul>
+            <li><input type="reset" value="Contato"></li>
+        </ul>
+    </div>
+    <div class="card">
+        <ul>
+            <li>distancia</li>
+            <li>Nome</li>
+            <li><input type="reset" value="Disponivel"></li>
+        </ul>
+        <hr>
+        <ul>
+            <li>Instrumento</li>
+            <div>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
+            </div>
+        </ul>
+        <hr>
+        <ul>
+            <li><input type="reset" value="Contato"></li>
+        </ul>
+    </div>
+    <div class="card">
+        <ul>
+            <li>distancia</li>
+            <li>Nome</li>
+            <li><input type="reset" value="Disponivel"></li>
+        </ul>
+        <hr>
+        <ul>
+            <li>Instrumento</li>
+            <div>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
+            </div>
+        </ul>
+        <hr>
+        <ul>
+            <li><input type="reset" value="Contato"></li>
+        </ul>
     </div>
 </div>
 
