--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,9 +1,8 @@
 .body {
     display: grid;
-    margin: 15px;
+    margin: 30px;
     gap: 25px;
-}
-     
+} 
 .conteudo-cards {
     grid-template-columns: auto auto;
     
@@ -33,4 +32,18 @@ div > h1 {
     border: 1px solid gray;
     border-radius: 10px;
     text-align: center;
+}
+
+.titulo-instrutor {
+    text-align: center;
+}
+
+/* Gerencia Perfil */
+.alinhamento {
+    display: grid;
+    grid-template-columns: 20% 50% 20% ;
+    grid-template-areas: ". formulario .";
+}
+.forms {
+    grid-area: formulario;
 }
