Fiz algumas mudanças

--- a/app/templates/administrador.html
+++ b/app/templates/administrador.html
@@ -26,8 +26,8 @@
             aria-expanded="false">Filtro <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Nome</a></li>
-            <li><a href="#">Instrumento</a></li>
             <li><a href="#">Cidade</a></li>
+            <li><a href="#">Instrumento</a></li>
           </ul>
         </li>
       </ul>
@@ -56,7 +56,7 @@
       <ul class="dropdown-menu">
         <li><a href="#">Por Nome</a></li>
         <li><a href="#">Por Cidade</a></li>
-        <li><a href="#">Por Cidadeor Instruento</a></li>
+        <li><a href="#">Por Instrumento</a></li>
       </ul>
 </div>
 <table class="table">
@@ -72,6 +72,7 @@
   <tbody>
     <tr>
       <th scope="row">1</th>
+      
       <td>João</td>
       <td>Silva</td>
       <td>silva@gmail.com</td>
