--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,9 +9,10 @@
         Instrumentos<b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-        <li><a href="">Bateria</a></li>
-        <li><a href="">Violao</a></li>
-        <li><a href="">Guitarra</a></li>
+        <li><a href="">Percussão</a></li>
+        <li><a href="">Corda</a></li>
+        <li><a href="">Teclado</a></li>
+        <li><a href="">Corda</a></li>
     </ul>
 </li>
 {% endblock  %}
@@ -38,9 +39,10 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                         aria-expanded="false">Instrumento <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Bateria</a></li>
-                        <li><a href="#">Violão</a></li>
-                        <li><a href="#">Guitarra</a></li>
+                        <li><a href="">Percussão</a></li>
+                        <li><a href="">Corda</a></li>
+                        <li><a href="">Teclado</a></li>
+                        <li><a href="">Corda</a></li>
                     </ul>
                 </li>
             </ul>
@@ -130,11 +132,13 @@
     <div class="avaliacoes">
         <div class="avaliacao">
             <ul>
-                <label for="">Instrutor</label>
-                <input type="text" name="" id="">
-                <br>
-                <label for="">instrumento</label>
-                <input type="text" name="" id="">
+                <div class="row col-xs-6 col-sm-6 col-md-6 col-lg-6"  align="center">
+                    <button class="btn btn-primary" align="center">Cadastrar</button>
+                </div>
+                <br>      
+                <div class="row col-xs-6 col-sm-6 col-md-6 col-lg-6"  align="center">
+                    <button class="btn btn-primary" align="center">Cancelar</button>
+                </div>
             </ul>
             <hr>
             <span class="fa fa-star checked"></span>
