--- a/app/templates/autenticacao/login.html
+++ b/app/templates/autenticacao/login.html
@@ -10,7 +10,7 @@
 <div class="col-md-4">
     {{ wtf.quick_form(form) }}
     <br>
-    <p>Esqueceu sua Senha? <a href="{{ url_for('autenticacao.requisicao_reset_senha') }}">Clique aqui para Resetar sua Senha</a>.</p>
+    <p>Esqueceu sua Senha? <a href="{{ url_for('autenticacao.requisicao_reset_senha') }}">Clique aqui!</a>.</p>
     <p>É Novo Aqui? <a href="{{ url_for('autenticacao.cadastro') }}">Cadastre-se</a>.</p>
 </div>
 {% endblock %}
