--- a/app/templates/perfil_usuario.html
+++ b/app/templates/perfil_usuario.html
@@ -41,7 +41,7 @@
                 </div>
                 <hr>
             </form>
-            <h3>Adicionar Instrumento ou Trocar Instrumento</h3>
+            <h3>Adicionar Instrumento</h3>
             <br>
             <label for="">Selecionar Instrumento</label>
             <div class="btn-group" role="group">
