Alterado links e rotas

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,12 +27,15 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 {% if current_user.is_authenticated %}
+                <li><a href="{{ url_for('main.instrutor', username=current_user.username) }}">Instrutores</a></li>
                 <li><a href="{{ url_for('main.usuario', username=current_user.username) }}">Meu Perfil</a></li>
+                <li><a href="{{ url_for('main.relatorio') }}">Relatorios</a></li>
                 {% endif %}
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
                 {% block instrumentos %}{% endblock %}
+                <li><a href="{{ url_for('main.perfil_usuario') }}">Editar Perfil</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         Minha Conta<b class="caret"></b>
@@ -40,6 +43,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="{{ url_for('autenticacao.alterar_senha') }}">Alterar Senha</a></li>
                         <li><a href="{{ url_for('autenticacao.requisicao_alterar_email') }}">Alterar Email</a></li>
+                        <li><a href="{{ url_for('main.perfil_administrador') }}">Alterar Perfil Admin</a></li>
                         <li><a href="{{ url_for('autenticacao.logout') }}">Sair</a></li>
                     </ul>
                 </li>
