--- a/app/templates/instrutor.html
+++ b/app/templates/instrutor.html
@@ -9,7 +9,7 @@
 {% block content %}
 
 <div class="titulo-isntrutor">
-    <h1>Contatos solicitados</h1>
+    <h1>Instrutores</h1>
 </div>
 <div class="body conteudo-cards">
     <div class="card">
