--- a/app/templates/perfil_administrador.html
+++ b/app/templates/perfil_administrador.html
@@ -26,7 +26,7 @@
         <div class="forms">
 
             <form>
-                <legend>Form title</legend>
+                <legend>Editar Perfil Administrador</legend>
                 <div class="form-group">
                     <label for="">Nome</label>
                     <input type="text" class="form-control" id="" placeholder="Input field">
@@ -41,42 +41,9 @@
                 </div>
                 <hr>
             </form>
-            <h3>Adicionar Instrumento</h3>
-            <br>
-            <label for="">Selecionar Instrumento</label>
-            <div class="btn-group" role="group">
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Selecionar
-                    <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Bateria</a></li>
-                    <li><a href="#">Violao</a></li>
-                </ul>
-            </div>
-            <div>
-                <form action="/action_page.php">
-                    <label for="">Nível de Conhecimento</label><br>
-                    <input type="radio" id="male" name="gender" value="nenhum">
-                    <label for="male">Nenhum</label><br>
-                    <input type="radio" id="female" name="gender" value="basico">
-                    <label for="female">Básico</label><br>
-                    <input type="radio" id="other" name="gender" value="medio">
-                    <label for="other">Médico</label><br>
-                    <input type="radio" id="other" name="gender" value="avancado">
-                    <label for="other">Avançado</label>
-                </form>
-            </div>
-            <br>
-            <div>
-                <label for="">Adicionar Video</label>
-                <input type="reset" value="Video">
-            </div>
-            <br>
             <div class="btn-group btn-group-justified" role="group" aria-label="...">
                 <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-default">Adicionar</button>
+                    <button type="button" class="btn btn-default">Alterar</button>
                 </div>
 
                 <div class="btn-group" role="group">
