Alteracoes basica porem muito importantes, pois o filtro estava como link, mudei para option, pois assim ele possui um valor a ser passado pelo formulario ao dar submit

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -47,3 +47,9 @@ div > h1 {
 .forms {
     grid-area: formulario;
 }
+.total-relatorio {
+    margin-top: 5px;
+}
+.select-relatorio {
+    margin-top: 10px;
+}
