--- a/app/templates/relatorio.html
+++ b/app/templates/relatorio.html
@@ -19,25 +19,20 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-            aria-expanded="false">Filtro <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Nome</a></li>
-            <li><a href="#">Instrumento</a></li>
-            <li><a href="#">Cidade</a></li>
-          </ul>
-        </li>
-      </ul>
       <form class="navbar-form navbar-left">
+
+        <select name="filtro" class="select-relatorio" id="filtro">
+          <option value="aluno">Aluno</option>
+          <option value="instrumento">Instrumento</option>
+          <option value="cidade">Cidade</option>
+        </select>
+
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
-      <ul class="nav nav-pills navbar-right" role="tablist">
+      <ul class="nav nav-pills navbar-right total-relatorio" role="tablist">
         <li role="presentation" class="active" style="margin-top: 5px;"><a href="#">Total <span
               class="badge">42</span></a></li>
       </ul>
@@ -48,9 +43,9 @@
 </nav>
 <div class="dropdown">
   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Instrutor
-   
-  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Aluno
-   
+
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Aluno
+
 </div>
 <table class="table">
   <thead>
