Dar erro dizendo que relatorio nao foi definido, se resolver o problema comenta ai pfv

--- a/app/templates/relatorio.html
+++ b/app/templates/relatorio.html
@@ -8,25 +8,10 @@
   <div class="container-fluid">
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-<<<<<<< HEAD
-      <ul class="nav navbar-nav">
-
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-            aria-expanded="false">Filtro <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Nome</a></li>
-            <li><a href="#">Cidade</a></li>
-            <li><a href="#">Instrumento</a></li>
-          </ul>
-        </li>
-      </ul>
-=======
->>>>>>> 85d6e127190ecaed6b312026a08906ae0b0eeeb1
       <form class="navbar-form navbar-left">
 
         <select name="filtro" class="select-relatorio" id="filtro">
-          <option value="aluno">Aluno</option>
+          <option value="nome">Nome</option>
           <option value="instrumento">Instrumento</option>
           <option value="cidade">Cidade</option>
         </select>
@@ -49,15 +34,6 @@
   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Instrutor
 
     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Aluno
-<<<<<<< HEAD
-      <ul class="dropdown-menu">
-        <li><a href="#">Por Nome</a></li>
-        <li><a href="#">Por Cidade</a></li>
-        <li><a href="#">Por Instrumento</a></li>
-      </ul>
-=======
-
->>>>>>> 85d6e127190ecaed6b312026a08906ae0b0eeeb1
 </div>
 <table class="table">
   <thead>
