--- a/app/templates/perfil_administrador.html
+++ b/app/templates/perfil_administrador.html
@@ -25,8 +25,8 @@
     <div class="alinhamento">
         <div class="forms">
 
-            <form>
-                <legend>Editar Perfil Administrador</legend>
+            <formlegend>
+                <>Editar Perfil Administrador</legend>
                 <div class="form-group">
                     {{ administrador.name.label }}
                     {{ administrador.name(class="form-control") }}
