--- a/app/templates/usuario.html
+++ b/app/templates/usuario.html
@@ -11,4 +11,25 @@
         {% if usuario.sobre_mim %}<p> {{ usuario.sobre_mim }}</p>{% endif %}
     </div>
 </div>
+
+<div class="body">
+    <div class="alinhamento-centro">
+
+        <hr>
+        <div class="comentarios">
+            <div class="video-flex">
+                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=S7xGNjau8VY" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+
+            <div class="comentario">
+                <h4>Nome da Pessoa</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus sequi optio, dolorem laudantium
+                    fugiat, nobis omnis sunt libero doloremque dolore tempora ipsum nihil laborum quod consectetur
+                    aspernatur cum, ex voluptatem?</p>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
