--- a/app/static/style.css
+++ b/app/static/style.css
@@ -7,11 +7,12 @@
 } 
 
     
-@media (max-width: 481px) /*and (max-width: 1024px)*/ {
+@media (min-width: 481px) and (max-width: 1024px) {
     .conteudo-cards {
         grid-template-columns: auto;   
         margin: 0 auto;
         min-width: 481px;
+        max-width: 1024px;
     }
 }
 @media (min-width: 1024px) {
@@ -70,3 +71,27 @@ div > h1 {
     margin-top: 10px;
 }
 
+/* Perfil Instrutor */
+.video-flex { 
+    position: relative; 
+    padding-bottom: 56.25%; 
+    padding-top: 0px; 
+    height: 0; 
+    overflow: hidden;
+  }
+  
+  .video-flex iframe, .video-flex object, .video-flex embed {
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%;
+  }
+  
+.alinhamento-centro {
+    margin: 0 auto;
+}
+
+.comentario > h3 {
+    background-color: green;
+}
