--- a/app/templates/usuario.html
+++ b/app/templates/usuario.html
@@ -14,11 +14,9 @@
 
 <div class="body">
     <div class="alinhamento-centro">
-
-        <hr>
         <div class="comentarios">
             <div class="video-flex">
-                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=S7xGNjau8VY" frameborder="0"
+                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=FaybjGx3uQI" frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
             </div>
