--- a/app/templates/usuario.html
+++ b/app/templates/usuario.html
@@ -16,10 +16,11 @@
     <div class="alinhamento-centro">
         <div class="comentarios">
             <div class="video-flex">
-                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=FaybjGx3uQI" frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/FaybjGx3uQI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
+            <div>
+                <h3>Sobre mim</h3>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non necessitatibus perspiciatis obcaecati, aliquid tempora libero nisi? Qui eos facere accusamus. Asperiores exercitationem nam, repellendus tempore minus voluptas hic quos facilis?</div>
             <hr>
             <div class="comentario">
                 <h4>Nome da Pessoa</h4>
