Mechendo nas telas

--- a/app/templates/instrutor.html
+++ b/app/templates/instrutor.html
@@ -13,90 +13,50 @@
 </div>
 <div class="body conteudo-cards">
     <div class="card">
-        <ul>
+        <ul style="margin-top: 20px;">
             <li>distancia</li>
             <li>Nome</li>
-            <li><input type="reset" value="Disponivel"></li>
-        </ul>
-        <hr>
-        <ul>
             <li>Instrumento</li>
-            <div>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-                <span class="fa fa-star"></span>
-            </div>
         </ul>
         <hr>
         <ul>
+            <li><input type="reset" value="Disponivel"></li>
             <li><input type="reset" value="Contato"></li>
         </ul>
     </div>
     <div class="card">
-        <ul>
+        <ul style="margin-top: 20px;">
             <li>distancia</li>
             <li>Nome</li>
-            <li><input type="reset" value="Disponivel"></li>
-        </ul>
-        <hr>
-        <ul>
             <li>Instrumento</li>
-            <div>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-                <span class="fa fa-star"></span>
-            </div>
         </ul>
         <hr>
         <ul>
+            <li><input type="reset" value="Disponivel"></li>
             <li><input type="reset" value="Contato"></li>
         </ul>
     </div>
     <div class="card">
-        <ul>
+        <ul style="margin-top: 20px;">
             <li>distancia</li>
             <li>Nome</li>
-            <li><input type="reset" value="Disponivel"></li>
-        </ul>
-        <hr>
-        <ul>
             <li>Instrumento</li>
-            <div>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-                <span class="fa fa-star"></span>
-            </div>
         </ul>
         <hr>
         <ul>
+            <li><input type="reset" value="Disponivel"></li>
             <li><input type="reset" value="Contato"></li>
         </ul>
     </div>
     <div class="card">
-        <ul>
+        <ul style="margin-top: 20px;">
             <li>distancia</li>
             <li>Nome</li>
-            <li><input type="reset" value="Disponivel"></li>
-        </ul>
-        <hr>
-        <ul>
             <li>Instrumento</li>
-            <div>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-                <span class="fa fa-star"></span>
-            </div>
         </ul>
         <hr>
         <ul>
+            <li><input type="reset" value="Disponivel"></li>
             <li><input type="reset" value="Contato"></li>
         </ul>
     </div>
